# ee3-cli

./: Cargo.toml  LICENSE  README.md
.github/: contributors-template.hbs
.github/workflows/: update-contributors.yml
scripts/unix/: install.sh  uninstall.sh
scripts/win/: install.ps1  uninstall.ps1
src/: main.rs  shell.rs
src/commands/: init.rs  mkcd.rs  mod.rs  new.rs
