[package]
name = "ee3"
version = "0.1.0"
edition = "2024"
description = "EE3 CLI Tool - A fun and powerful command-line tool"
repository = "https://github.com/yourusername/ee3-cli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "productivity", "tools"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"
